# phrasectl

./: .gitignore  CLAUDE.md  README.md  config.toml  install.sh  install_linux.sh  install_macos.sh  phrasectl  phrasectl.py  pyproject.toml
src/phrasectl/: __init__.py  __main__.py  api.py  config.py  prompt.py
src/phrasectl/linux/: __init__.py
src/phrasectl/macos/: __init__.py
tests/: test_api.py  test_clipboard.py  test_config.py  test_linux.py  test_macos.py  test_main.py  test_prompt.py  test_rephrase.py  test_window.py
