[project]
name = "phrasectl"
version = "0.1.0"
description = "System-wide AI text rephrasing tool (Linux/Wayland and macOS)"
requires-python = ">=3.11"
dependencies = ["anthropic"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
